Wrap every page in the `container` class; ensure footer stays on the bottom of the page

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -188,6 +188,12 @@ a:hover {
     color: var(--link-hovered);
 }
 
+.container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .content {
     margin: 0 10%;
 }
